--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -648,7 +648,7 @@
 <span class="sd">        See Also</span>
 <span class="sd">        --------</span>
 <span class="sd">        gv.create_dirs_recursive</span>
-<span class="sd">        </span>
+
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">t_path</span> <span class="o">=</span> <span class="p">[</span><span class="n">p</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;path&#39;</span><span class="p">),</span> <span class="n">uid</span><span class="p">]</span>
         <span class="n">p_path</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
@@ -699,6 +699,10 @@
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../mpt.html#mpt.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    main method, initializes the  Monograph  Publication Tool and  runs the configuration</span>
+
+<span class="sd">    See Also</span>
+<span class="sd">    --------</span>
+<span class="sd">    run</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">pre_process_instance</span> <span class="o">=</span> <span class="n">MPT</span><span class="p">()</span>
