--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -127,6 +127,10 @@
 <span class="sd">        True: boolean</span>
 <span class="sd">            Returns True if all the projects are typeset</span>
 
+<span class="sd">        See Also</span>
+<span class="sd">        --------</span>
+<span class="sd">        typeset_all_projects</span>
+
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">typeset_all_projects</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">True</span></div>
