--- a/_modules/xmlMerge.html
+++ b/_modules/xmlMerge.html
@@ -309,6 +309,10 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Runs the configuration on the processing object</span>
 
+<span class="sd">        See Also</span>
+<span class="sd">        --------</span>
+<span class="sd">        process_xml_file</span>
+
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">process_xml_file</span><span class="p">()</span></div></div>
 
