--- a/_modules/xmlMerge.html
+++ b/_modules/xmlMerge.html
@@ -137,7 +137,7 @@
 
 <span class="sd">        See Also</span>
 <span class="sd">        --------</span>
-<span class="sd">        create_book_part_bits, do_file_io</span>
+<span class="sd">        create_book_part_bits, create_book_bits, do_file_io</span>
 
 
 <span class="sd">        &quot;&quot;&quot;</span>
