--- a/_modules/globals.html
+++ b/_modules/globals.html
@@ -167,7 +167,7 @@
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
-<span class="sd">        josn : json</span>
+<span class="sd">        json : json</span>
 <span class="sd">            json object</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
