--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -72,10 +72,6 @@
 
 
 
-<span class="sd">* Web : https://github.com/withanage/mpt</span>
-<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
-<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
-
 <span class="sd">Notes</span>
 <span class="sd">-------</span>
 <span class="sd">This program may be used to consolidate output files, generated from a certain tool.  But a consolidation tool should</span>
@@ -715,6 +711,13 @@
 
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s1">&#39;__main__&#39;</span><span class="p">:</span>
     <span class="n">main</span><span class="p">()</span>
+
+
+<span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">* Web : https://github.com/withanage/mpt</span>
+<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
+<span class="sd">&quot;&quot;&quot;</span>
 </pre></div>
 
           </div>
