--- a/globals.html
+++ b/globals.html
@@ -117,7 +117,7 @@
 <tbody valign="top">
 <tr class="field-odd field"><th class="field-name">Parameters:</th><td class="field-body"><strong>pth</strong> (<em>str</em>) &#8211; path of the  file in the folder structure</td>
 </tr>
-<tr class="field-even field"><th class="field-name">Returns:</th><td class="field-body"><strong>josn</strong> &#8211; json object</td>
+<tr class="field-even field"><th class="field-name">Returns:</th><td class="field-body"><strong>json</strong> &#8211; json object</td>
 </tr>
 <tr class="field-odd field"><th class="field-name">Return type:</th><td class="field-body">json</td>
 </tr>
