--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -78,7 +78,8 @@
 <span class="sd">be set as the last tool in a process chain.</span>
 
 
-
+<span class="sd">References</span>
+<span class="sd">----------</span>
 <span class="sd">* Web : https://github.com/withanage/mpt</span>
 <span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
 <span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
