--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -62,13 +62,16 @@
 
 
 <span class="sd">Usage:</span>
-<span class="sd">    preProcess.py  &lt;config_file&gt; [options]</span>
+<span class="sd">    mpr.py  &lt;config_file&gt; [options]</span>
 <span class="sd">Options:</span>
 <span class="sd">    -d, --debug  Enable debug output</span>
 
 <span class="sd">Example</span>
 <span class="sd">--------</span>
-<span class="sd">python /usr/local/mpt/static/tools/mpt.py /home/wit/mpt.json  --debug</span>
+<span class="sd">BUILD_DIR=/usr/local/mpt</span>
+<span class="sd">python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json</span>
+<span class="sd">python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json --debug</span>
+
 
 
 
