--- a/_modules/xmlMerge.html
+++ b/_modules/xmlMerge.html
@@ -69,6 +69,9 @@
 <span class="sd">    -d, --debug   Enable debug output</span>
 <span class="sd">    -m --metadata=&lt;file__name_schema.xml&gt;</span>
 
+
+<span class="sd">References</span>
+<span class="sd">----------</span>
 <span class="sd">* Web : https://github.com/withanage/mpt</span>
 <span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
 <span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
