--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -77,6 +77,9 @@
 <span class="sd">-----</span>
 <span class="sd">All the functions are done  in the global element tree for performance reasons.</span>
 
+
+<span class="sd">References</span>
+<span class="sd">----------</span>
 <span class="sd">* Web : https://github.com/withanage/mpt</span>
 <span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
 <span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
