--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -69,7 +69,7 @@
 <span class="sd">Example</span>
 <span class="sd">--------</span>
 
-<span class="sd">python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json --debug</span>
+<span class="sd">python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json</span>
 
 
 <span class="sd">Notes</span>
