--- a/mpt.html
+++ b/mpt.html
@@ -79,7 +79,7 @@ generate the output.</p>
 </dd>
 </dl>
 <p class="rubric">Example</p>
-<p>python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json &#8211;debug</p>
+<p>python $BUILD_DIR/static/tools/mpt.py  $BUILD_DIR/static/tools/configurations/example.json</p>
 <p class="rubric">Notes</p>
 <p>This program may be used to consolidate output files, generated from a certain tool.  But a consolidation tool should
 be set as the last tool in a process chain.</p>
