--- a/_modules/debug.html
+++ b/_modules/debug.html
@@ -55,7 +55,7 @@
 <span class="c1">#</span>
 <span class="c1"># Author    : Dulip Withanage , University of Heidelberg</span>
 <span class="kn">import</span> <span class="nn">sys</span>
-
+<span class="kn">from</span> <span class="nn">termcolor</span> <span class="k">import</span> <span class="n">colored</span>
 
 <div class="viewcode-block" id="Debuggable"><a class="viewcode-back" href="../debug.html#debug.Debuggable">[docs]</a><span class="k">class</span> <span class="nc">Debuggable</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 
@@ -98,6 +98,24 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">fatal_error</span><span class="p">(</span>
                     <span class="bp">self</span><span class="p">,</span> <span class="s1">u&#39;A non unicode string was passed to the debugger&#39;</span><span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">print_</span><span class="p">(</span><span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">)</span></div>
+
+<div class="viewcode-block" id="Debug.print_console"><a class="viewcode-back" href="../debug.html#debug.Debug.print_console">[docs]</a>    <span class="k">def</span> <span class="nf">print_console</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Print debug message</span>
+
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        module: python module</span>
+<span class="sd">             Returns the name of the module</span>
+<span class="sd">        message: str</span>
+<span class="sd">            message as a string</span>
+
+<span class="sd">        See Also</span>
+<span class="sd">        --------</span>
+<span class="sd">        print_()</span>
+
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="nb">print</span><span class="p">(</span><span class="s1">u&#39;[</span><span class="si">{0}</span><span class="s1">] </span><span class="si">{1}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">colored</span><span class="p">(</span><span class="n">module</span><span class="o">.</span><span class="n">get_module_name</span><span class="p">(),</span><span class="s1">&#39;green&#39;</span><span class="p">),</span> <span class="n">unicode</span><span class="p">(</span><span class="n">message</span><span class="p">)))</span></div>
 
 <div class="viewcode-block" id="Debug.print_"><a class="viewcode-back" href="../debug.html#debug.Debug.print_">[docs]</a>    <span class="k">def</span> <span class="nf">print_</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
