--- a/_modules/globals.html
+++ b/_modules/globals.html
@@ -110,8 +110,13 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_INPUT_FILE_IS_NOT_FOUND</span> <span class="o">=</span> <span class="s1">u&#39;xml input file is not found&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_INPUT_FILE_IS_NOT_VALID</span> <span class="o">=</span> <span class="s1">u&#39;xml input file is not valid&#39;</span>
 
+        <span class="c1"># WORDS</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">OUTPUT_FOLDER</span> <span class="o">=</span> <span class="s1">u&#39;Output Folder&#39;</span>
+
         <span class="bp">self</span><span class="o">.</span><span class="n">debug</span> <span class="o">=</span> <span class="n">Debug</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">numeral_map</span> <span class="o">=</span> <span class="n">numeral_map</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">version</span><span class="o">=</span><span class="s1">&#39;0.0.1&#39;</span>
 
     <span class="nd">@staticmethod</span>
 <div class="viewcode-block" id="GV.fatal_error"><a class="viewcode-back" href="../globals.html#globals.GV.fatal_error">[docs]</a>    <span class="k">def</span> <span class="nf">fatal_error</span><span class="p">(</span><span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
@@ -198,7 +203,30 @@
                 <span class="k">except</span> <span class="ne">OSError</span> <span class="k">as</span> <span class="n">o</span><span class="p">:</span>
                     <span class="nb">print</span> <span class="n">o</span>
                     <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">p</span></div></div>
+        <span class="k">return</span> <span class="n">p</span></div>
+
+<div class="viewcode-block" id="GV.set_numbering_tags"><a class="viewcode-back" href="../globals.html#globals.GV.set_numbering_tags">[docs]</a>    <span class="k">def</span> <span class="nf">set_numbering_tags</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tags</span> <span class="p">,</span><span class="n">tr</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Automatic numbering of the list of elements</span>
+
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        tags: list</span>
+<span class="sd">         list of elements</span>
+
+<span class="sd">        Returns</span>
+<span class="sd">        -------</span>
+<span class="sd">        tr : elementtree</span>
+
+
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">for</span> <span class="n">tag</span> <span class="ow">in</span> <span class="n">tags</span><span class="p">:</span>
+            <span class="n">sh</span> <span class="o">=</span> <span class="n">tr</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="s1">&#39;.//&#39;</span> <span class="o">+</span> <span class="n">tag</span><span class="p">)</span>
+            <span class="n">sid</span> <span class="o">=</span> <span class="mi">1</span>
+            <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">sh</span><span class="p">:</span>
+                <span class="n">i</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="s1">&#39;id&#39;</span><span class="p">,</span> <span class="n">tag</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;-&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">sid</span><span class="p">))</span>
+                <span class="n">sid</span> <span class="o">+=</span> <span class="mi">1</span>
+        <span class="k">return</span> <span class="n">tr</span></div></div>
 </pre></div>
 
           </div>
