--- a/_modules/index.html
+++ b/_modules/index.html
@@ -51,6 +51,7 @@
 <ul><li><a href="debug.html">debug</a></li>
 <li><a href="docopt.html">docopt</a></li>
 <li><a href="globals.html">globals</a></li>
+<li><a href="merge.html">merge</a></li>
 <li><a href="mpt.html">mpt</a></li>
 <li><a href="xmlMerge.html">xmlMerge</a></li>
 <li><a href="xmlProcess.html">xmlProcess</a></li>
