--- a/_modules/globals.html
+++ b/_modules/globals.html
@@ -105,18 +105,21 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">TYPESETTER_RUNS_WITH_NO_ARGUMENTS</span> <span class="o">=</span> <span class="s1">u&#39;typesetter runs with no arguments&#39;</span>
 
         <span class="c1"># xml</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">RUNNING_SAXON_CONVERSION</span> <span class="o">=</span> <span class="s1">u&#39;running saxon conversion&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_ELEMENT_NOT_FOUND</span> <span class="o">=</span> <span class="s1">u&#39;xml element not found&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_FILE_NOT_CREATED</span> <span class="o">=</span> <span class="s1">u&#39;xml file not created&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_INPUT_FILE_IS_NOT_FOUND</span> <span class="o">=</span> <span class="s1">u&#39;xml input file is not found&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">XML_INPUT_FILE_IS_NOT_VALID</span> <span class="o">=</span> <span class="s1">u&#39;xml input file is not valid&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">SAXON_IS_NOT_AVAILABLE</span> <span class="o">=</span> <span class="s1">u&#39;saxon is not available&#39;</span>
 
         <span class="c1"># WORDS</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">OUTPUT_FOLDER</span> <span class="o">=</span> <span class="s1">u&#39;Output Folder&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">OUTPUT</span> <span class="o">=</span> <span class="s1">u&#39;Output&#39;</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">debug</span> <span class="o">=</span> <span class="n">Debug</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">numeral_map</span> <span class="o">=</span> <span class="n">numeral_map</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">version</span><span class="o">=</span><span class="s1">&#39;0.0.1&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">uuid</span> <span class="o">=</span> <span class="s1">&#39;4e4dd8cf-26bf-4893-b037-1fd3bf08f112&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">version</span> <span class="o">=</span> <span class="s1">&#39;0.0.1&#39;</span>
 
     <span class="nd">@staticmethod</span>
 <div class="viewcode-block" id="GV.fatal_error"><a class="viewcode-back" href="../globals.html#globals.GV.fatal_error">[docs]</a>    <span class="k">def</span> <span class="nf">fatal_error</span><span class="p">(</span><span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
@@ -205,7 +208,7 @@
                     <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">p</span></div>
 
-<div class="viewcode-block" id="GV.set_numbering_tags"><a class="viewcode-back" href="../globals.html#globals.GV.set_numbering_tags">[docs]</a>    <span class="k">def</span> <span class="nf">set_numbering_tags</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tags</span> <span class="p">,</span><span class="n">tr</span><span class="p">):</span>
+<div class="viewcode-block" id="GV.set_numbering_tags"><a class="viewcode-back" href="../globals.html#globals.GV.set_numbering_tags">[docs]</a>    <span class="k">def</span> <span class="nf">set_numbering_tags</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tags</span><span class="p">,</span> <span class="n">tr</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Automatic numbering of the list of elements</span>
 
